tests/fixtures/compile-errors/register-invalid-parameter/input.nim
import strformat,options

import ../../../../dist/typecheck.macro
register(42)
